--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "AVLTree"]
 	path = AVLTree
 	url = https://github.com/owencho/AVLTree
-[submodule "LinkList"]
-	path = LinkList
-	url = https://github.com/owencho/LinkList
+[submodule "LinkedList"]
+	path = LinkedList
+	url = https://github.com/owencho/LinkedList
